--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.24</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.4.31.Final</version>
+    </dependency>
 
   </dependencies>
 
