--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=o5bbbelhdwppfshh
+spring.datasource.password=ki9fo4vfig4dktll
+spring.datasource.url=jdbc:mysql://lmc8ixkebgaq22lo.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/aywe6xmc8aokla5b
