--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+
+server.port=${port:5000}
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=id26oxcfsj01jdh0
 spring.datasource.password=gs7uyin1bo4gnzyp
