--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,26 @@ server.port=${port:5000}
 
 logging.level.org.springframework.mail=DEBUG
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+#spring.mail.host=smtp.gmail.com
+#spring.mail.host=smtp.sparkpostmail.com
+#spring.mail.port=587
 spring.mail.username=paymentpaylinks@gmail.com
 spring.mail.password=Paylinks@12345
+#
+## Other properties
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.connectiontimeout=5000
+#spring.mail.properties.mail.smtp.timeout=5000
+#spring.mail.properties.mail.smtp.writetimeout=5000
 
-# Other properties
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+mail.host=smtp.sparkpostmail.com
+mail.port=587
+mail.smtp.auth=true
+mail.smtp.socketFactory.port=587
+mail.smtp.socketFactory.fallback=true
+mail.smtp.starttls.enable=true
+mail.smtp.starttls.required=true
+mail.smtp.ssl.enable=false
 
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
