--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,14 +15,14 @@ spring.mail.password=Paylinks@12345
 #spring.mail.properties.mail.smtp.timeout=5000
 #spring.mail.properties.mail.smtp.writetimeout=5000
 
-mail.host=smtp.sparkpostmail.com
-mail.port=587
-mail.smtp.auth=true
-mail.smtp.socketFactory.port=587
-mail.smtp.socketFactory.fallback=true
-mail.smtp.starttls.enable=true
-mail.smtp.starttls.required=true
-mail.smtp.ssl.enable=false
+spring.mail.host=smtp.sparkpostmail.com
+spring.mail.port=587
+spring.mail.smtp.auth=true
+spring.mail.smtp.socketFactory.port=587
+spring.mail.smtp.socketFactory.fallback=true
+spring.mail.smtp.starttls.enable=true
+spring.mail.smtp.starttls.required=true
+spring.mail.smtp.ssl.enable=false
 
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
